--- a/Hugo_analysis.ipynb
+++ b/Hugo_analysis.ipynb
@@ -403,7 +403,7 @@
     "targeted_data['Bitcoin_Returns'] = targeted_data['Bitcoin_Price'].pct_change()\n",
     "targeted_data['Ethereum_Returns'] = targeted_data['Ethereum_Price'].pct_change()\n",
     "\n",
-    "# Define a rolling window (e.g., 30 days)\n",
+    "# Define the 30 day window\n",
     "window = 30\n",
     "\n",
     "# Calculate rolling volatility\n",
